--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@react-three/drei": "^9.88.0",
         "@react-three/fiber": "^8.15.11",
         "@supabase/supabase-js": "^2.86.0",
+        "@vercel/analytics": "^1.5.0",
         "clsx": "^2.0.0",
         "framer-motion": "^10.16.4",
         "lucide-react": "^0.292.0",
